--- a/templates/home.html
+++ b/templates/home.html
@@ -32,4 +32,7 @@
         <a href="{%url 'createRoom'%}">Create Room</a> 
     </div>
 {%endif%}
+    <div>
+        <a href = "{%url 'question'%}">Quiz</a>
+    </div>
 </div>
