--- a/templates/question.html
+++ b/templates/question.html
@@ -103,7 +103,7 @@
 <div class="navbar">
         <div class="space-around">
             <input type="text" placeholder="Search" class="px-2 py-1 border search border-gray-300 rounded-lg mr-2 ">
-            <a href="" class="px-4 py-2 bg-blue-500 text-white rounded-lg features home">Home</a>
+            <a href="/" class="px-4 py-2 bg-blue-500 text-white rounded-lg features home">Home</a>
             <a href="logout/" class="px-4 py-2 bg-red-500 text-white rounded-lg home">Signout</a>
         </div>
     </div>
