--- a/templates/room.html
+++ b/templates/room.html
@@ -1,37 +1,194 @@
-<div>
-    <div>{{room.name}}</div>
-    <div>{{room.disease}}</div>
-    <div>{{room.host}}</div>
-    {%for i in messages%}
-    <div>   
-    {%if request.user == room.host%}
-    <a href="{%url 'deletemsg' i.id%}">Delete</a>
-    {%endif%}
-    </div>
-        <div>
-            {{i}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="chatroom.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body>
+    
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
+    <div class="navbar">
+        <div class="flex items-center space-evenly">
+            <span class="text-lg font-bold font usern">Kirtan</span>
         </div>
-    {%endfor%}
-    <div>
-        {{room.participent.count}}
+        <div class="flex abc items-center">
+            <input type="text" placeholder="Search" class="px-2 py-1 border search border-gray-300 rounded-lg mr-2 ">
+            <a href="#" class="px-4 py-2 bg-blue-500 text-white rounded-lg features home">Home</a>
+            <a href="#" class="px-4 py-2 bg-red-500 text-white rounded-lg home ml-2">Signout</a>
+        </div>
     </div>
-    <form method="POST">
-        {% csrf_token %}
-        <label for="participant_username">Add Participant:</label>
-        <select id="participant_username" name="participant_username">
-            {% for user in a_user %}
-                <option value="{{ user.username }}">{{ user.username }}</option>
-            {% endfor %}
-        </select>
-        <button type="submit">Add</button>
-    </form>
-    {%if request.user.is_authenticated%}
-    <form method="POST" action="">
-    {%csrf_token%}
-    <input type="text" name="message" placeholder="write a message" />
-    </form>
-    {%if request.user == room.host%}
-    <a href="{%url 'delete' room.id%}">Delete</a>
-    {%endif%}
-    {%endif%}
-</div>
+        <!-- char-area -->
+        <section class="message-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="chat-area">
+                            <!-- chatlist -->
+                            <div class="chatlist">
+                                <div class="modal-dialog-scrollable">
+                                    <div class="modal-content">
+                                        <div class="chat-header">
+                                            <div class="msg-search">
+                                                <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search" aria-label="search">
+                                                <a class="add" href="#"><img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/add.svg" alt="add"></a>
+                                            </div>
+    
+                                            <!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                                <li class="nav-item" role="presentation">
+                                                    <button class="nav-link active" id="Open-tab" data-bs-toggle="tab" data-bs-target="#Open" type="button" role="tab" aria-controls="Open" aria-selected="true">Open</button>
+                                                </li>
+                                                <li class="nav-item" role="presentation">
+                                                    <button class="nav-link" id="Closed-tab" data-bs-toggle="tab" data-bs-target="#Closed" type="button" role="tab" aria-controls="Closed" aria-selected="false">Closed</button>
+                                                </li>
+                                            </ul> -->
+                                        </div>
+    
+                                        <div class="modal-body">
+                                            <!-- chat-list -->
+                                            <div class="chat-lists">
+                                                <div class="tab-content" id="myTabContent">
+                                                    <div class="tab-pane fade show active" id="Open" role="tabpanel" aria-labelledby="Open-tab">
+                                                        <!-- chat-list -->
+                                                        <div class="chat-list">
+                                                            {%csrf_token%}
+                                                            {%for i in room_u%}
+                                                            <a href="{%url 'room' i.id%}" class="d-flex align-items-center">
+                                                                <div class="flex-shrink-0">
+                                                                    
+                                                                </div>
+                                                                <div class="flex-grow-1 ms-3">
+                                                                    <h3>{{i.name}}</h3>
+                                                                    <p>{{i.disease}}</p>
+                                                                    <p>{{i.participent.count}} Members</p>
+                                                                </div>
+                                                            </a>
+                                                            {%endfor%}
+                                                        </div>
+                                                        <!-- chat-list -->
+                                                    </div>
+                                                </div>
+    
+                                            </div>
+                                            <!-- chat-list -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- chatlist -->
+    
+    
+    
+                            <!-- chatbox -->
+                            <div class="chatbox">
+                                <div class="modal-dialog-scrollable">
+                                    <div class="modal-content">
+                                        <div class="msg-head">
+                                            <div class="row">
+                                                <div class="col-8">
+                                                    <div class="d-flex align-items-center">
+                                                        <span class="chat-icon"><img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/arroleftt.svg" alt="image title"></span>
+                                                        <div class="flex-grow-1 ms-3">
+                                                            <h3>{{room.name}}</h3>
+                                                            <p>{{room.disease}}</p>
+                                                            <p>{{room.participent.count}} Members</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                {%if request.user.doctor%}
+                                                {%if request.user.is_authenticated%}
+                                                <div class="col-4">
+                                                    <ul class="moreoption">
+                                                        <li class="navbar nav-item dropdown">
+                                                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
+                                                            <ul class="dropdown-menu">
+                                                                <li><a class="dropdown-item" href="#">Add Participant</a></li>
+                                                            </ul>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                                {%endif%}
+                                                {%endif%}
+                                            </div>
+                                        </div>
+    
+    
+                                        <div class="modal-body">
+                                            <div class="msg-body">
+                                                <ul>
+                                                    {%for i in messages%}
+
+                                                        {%if i.user == request.user%}
+                                                        <li class="sender">
+                                                            <p>i.text</p>
+                                                            <span class="time">10:06 am</span>
+                                                        </li>
+                                                        {%else%}
+                                                        <li class="repaly">
+                                                            <p>i.text</p>
+                                                            <span class="time">10:16 am</span>
+                                                        </li>
+                                                        {%endif%}
+                                                    {%endfor%}
+                                                    
+                                                </ul>
+                                            </div>
+                                        </div>
+    
+    
+                                        <div class="send-box">
+                                            <form action="" method="POST">
+                                                {%csrf_token%}
+                                                <input type="text" class="form-control" aria-label="message…" name = "message" placeholder="Write message…">
+    
+                                                <button type="button"><i class="fa fa-paper-plane" aria-hidden="true"></i>Send</button>
+                                            </form>
+    
+                                            <!-- <div class="send-btns">
+                                                <div class="attach">
+                                                    <div class="button-wrapper">
+                                                        <span class="label">
+                                                            <img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/upload.svg" alt="image title"> attached file 
+                                                        </span><input type="file" name="upload" id="upload" class="upload-box" placeholder="Upload File" aria-label="Upload File">
+                                                    </div>
+    
+                                                    <select class="form-control" id="exampleFormControlSelect1">
+                                                        <option>Select template</option>
+                                                        <option>Template 1</option>
+                                                        <option>Template 2</option>
+                                                    </select>
+    
+                                                    <div class="add-apoint">
+                                                        <a href="#" data-toggle="modal" data-target="#exampleModal4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 16 16" fill="none"><path d="M8 16C3.58862 16 0 12.4114 0 8C0 3.58862 3.58862 0 8 0C12.4114 0 16 3.58862 16 8C16 12.4114 12.4114 16 8 16ZM8 1C4.14001 1 1 4.14001 1 8C1 11.86 4.14001 15 8 15C11.86 15 15 11.86 15 8C15 4.14001 11.86 1 8 1Z" fill="#7D7D7D"/><path d="M11.5 8.5H4.5C4.224 8.5 4 8.276 4 8C4 7.724 4.224 7.5 4.5 7.5H11.5C11.776 7.5 12 7.724 12 8C12 8.276 11.776 8.5 11.5 8.5Z" fill="#7D7D7D"/><path d="M8 12C7.724 12 7.5 11.776 7.5 11.5V4.5C7.5 4.224 7.724 4 8 4C8.276 4 8.5 4.224 8.5 4.5V11.5C8.5 11.776 8.276 12 8 12Z" fill="#7D7D7D"/></svg> Appoinment</a>
+                                                    </div>
+                                                </div>
+                                            </div> -->
+    
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- chatbox -->
+    
+    
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+        <!-- char-area -->
+    
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="chatroom.js"></script> -->
+</body>
+</html>
