--- a/templates/question.html
+++ b/templates/question.html
@@ -1,134 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health Buddy Questions</title>
-    <!-- Include Tailwind CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <!-- Include custom CSS if available -->
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap');
-        /* Custom CSS for styling */
-        .body1 {
-
-            width: 70vw;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Poppins', sans-serif;
-            display: flex;
-            min-height: 100vh;
-            margin-left: 15vw;
-            flex-direction: column;
-        }
-      .navbar {
-                display: flex;
-                justify-content: space-around;
-                align-items: left;
-                color: white;
-                padding: 10px;
-                margin-bottom: 20px;
-        }
-        .question-container {
-            display: flex;
-            flex-direction: column;
-            /* align-items: center; */
-            margin-bottom: 1rem;
-            color: #fff;
-            font-family: 'Kanit', sans-serif;
-            background-color: rgb(46, 129, 246);
-            border-radius: 10px;
-            /* margin-left: 10%; */
-            width: 70vw;
-        }
-        .question-number {
-            min-width: 2rem;
-            padding: 0.5rem;
-            /* background-color: lightgray; */
-            color: #fff;
-            border-radius: 40%;
-            margin-right: 1rem;
-            text-align: center;
-        }
-        .question-label {
-            flex: 1;
-        }
-        .yes-no-box {
-            display: flex;
-            flex-direction: column;
-            /* align-items: center; */
-            margin-left: 25px;
-        }
-        .yes-no-option {
-            margin-right: 1rem;
-        }
-        .head {
-            font-family: 'Protest Strike', sans-serif;
-            
-        }
-        .hello {
-            background-color: #EEF5FF;
-        }
-        .submit {
-            justify-content: center;
-            align-items: center;
-            margin-top: 5%;
-            display: flex;
-            background-color: #AC87C5;
-            margin-left: 35vw;
-        }
-        .smbox {
-            padding: 50px;
-            gap: 0px;
-            border-radius: 20px;
-            background-color: #B4D4FF;
-        }
-        .usern{
-            padding: 0px 10vw;
-            color: black;
-            font-family: cursive;
-        }
-        .extra{
-            position:absolute;
-            height: 100px;
-        }
-    </style>
-    
-</head>
-<body class="body1 hello p-4"></body>
-<div class="extra">
-
-</div>
-<div class="navbar">
-        <div class="space-around">
-            <input type="text" placeholder="Search" class="px-2 py-1 border search border-gray-300 rounded-lg mr-2 ">
-            <a href="/" class="px-4 py-2 bg-blue-500 text-white rounded-lg features home">Home</a>
-            <a href="logout/" class="px-4 py-2 bg-red-500 text-white rounded-lg home">Signout</a>
-        </div>
+<div> 
+    <div>
+        {% csrf_token %}
+        <form  method="post" action="">
+            {% csrf_token %}
+            {% for que in ques %}
+            <h3>{{ que.0 }} -- {{ que.1 }}</h3>
+            <input type="radio" id="true_{{ que.0 }}" name="{{ que.0 }}" value="True">
+            <label for="true_{{ que.0 }}">True</label><br>
+            <input type="radio" id="false_{{ que.0 }}" name="{{ que.0 }}" value="False">
+            <label for="false_{{ que.0 }}">False</label><br>
+            {% endfor %}
+            <input type="submit" value="Next">
+        </form>
     </div>
-    <h1 class="text-3xl font-bold head mb-4">Patient Test</h1>
-    <form method="post" action="" class="flex flex-col items-center">
-        {%csrf_token%}
-        {%for que in ques%}
-        <div id="questions" class="smbox question-container bg-gray-800 p-4 rounded mb-4 w-full">
-            <div class="text-lg font-semibold text-black"> {{que.0}}. {{que.1}} </div>
-            <div class="flex flex-col items-start space-y-2">
-                <div>
-                    <input type="radio" id="true_{{ que.0 }}" name="{{ que.0 }}" value="True">
-                    <label for="true_{{ que.0 }}" class="text-black">True</label>
-                </div>
-                <div>
-                    <input type="radio" id="false_{{ que.0 }}" name="{{ que.0 }}" value="False">
-                    <label for="false_{{ que.0 }}" class="text-black">False</label>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-        <button type="submit" class="submit bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mx-auto">
-            Submit
-        </button>
-    </form>
-
-</body>
-</html>
+</div>
