--- a/templates/c_room.html
+++ b/templates/c_room.html
@@ -16,6 +16,7 @@
   
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
       <form class="space-y-6" action="" method="POST">
+        {%csrf_token%}
         <div>
           <label for="room_name" class="block text-sm font-medium leading-6 text-gray-900">Room name</label>
           <div class="mt-2">
